--- a/storage/dotenv-editor/backups/.env.backup_2022_10_01_152019
+++ b/storage/dotenv-editor/backups/.env.backup_2022_10_01_152019
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME="RTesDevoirs"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:3zmGwTB7czA+pe/OFxWH/RfDJfRUNG9otcbMGULB+m4=
 APP_DEBUG=true
-APP_URL==https://rtesdevoirs.deokonai.fr
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=rtesdevoirs
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=""
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -21,7 +21,6 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
@@ -50,7 +49,6 @@ PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
-
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
